src/css/_transform-stand-out.scss
$bg: 1050px;

.transform-stand-out{
    display: grid;
    
    &__text{
        padding: 6.4rem 2.4rem;
        text-align: center;
        
    }
    &__img{
        // have images touch conner to conner
        height: 100%;
        width: 100%;
    }
    &__title{
        font-size: 3.2rem;
        letter-spacing: -.023rem;
        color: var(--desaturated-blue-900);
        font-weight: 900;

        @media(min-width: $bg){
            // enlarge title
            font-size: 4rem;
            letter-spacing: -.029rem;
        }
    }
    &__message{
        font-size: 3rem;
        font-size: 1.8rem;
        line-height: 3rem;
        letter-spacing: -.013rem;
        font-weight: 600;

        margin-top: 2.4rem;
        margin-bottom: 3.2rem;

        color: var(--grayish-blue-700);
    }
    &__learn-more{
        text-decoration: none;
        font-weight: 900;
        font-size: 1.5rem;
        line-height: 2.5rem;
        letter-spacing: .1rem;
        color: var(--desaturated-blue-900);
        font-family: "Fraunces", serif;

        &::after{
            // custom underline
            content: "";
            width: 13.7rem;
            height: 1rem;
            display: block;
            position: relative;
            bottom: 1rem;
            left: -.3rem;
            z-index: -1;
            opacity: 25%;
            border-radius: 2.8rem;

            // center the div
            margin: auto;

            @media(min-width: $bg){
                // move custom underline under to the left
                margin: initial;
            }
        }
        // custom underline color  
        &-transform{
            &::after{
                background-color: var(--yellow);
            }
        }

        &-stand-out{
            &::after{
                background-color: var(--red);
            }
        }
    }

}

// space out into 4x4 grid
.transform{

    @media(min-width: $bg){
        grid-template:
            "transform-text transform-img" 1fr
            / 1fr 1fr
        ;
    }
    &__img{
        grid-area: transform-img;
    }
    &__text{
        grid-area: transform-text;

        @media(min-width: $bg){
            // increase white space and move text to the left
            padding: 15.8rem 11rem 15.7rem 16.5rem ;
            text-align: left;
        }
    }
}
.stand-out{
    @media(min-width: $bg){
        grid-template:
            "stand-out-img stand-out-text" 1fr
            / 1fr 1fr
        ;
    }
    &__img{
        grid-area: stand-out-img;
    }
    &__text{
        grid-area: stand-out-text;

        @media(min-width: $bg){
            // increase white space and move text to the left
            padding: 15.8rem 16.5rem 15.7rem 11rem   ;
            text-align: left;
        }
    }
}

